# Rusty-Playground

./: README.md
ClipboradMon/: Cargo.toml
ClipboradMon/src/: main.rs
DefExclusions/: Cargo.toml
DefExclusions/src/: main.rs
DefenderWeaknes/: Cargo.toml
DefenderWeaknes/src/: main.rs
DefenderWeakness/: Cargo.toml
DumpMDEConfig/: Cargo.toml  README.md
DumpMDEConfig/src/: main.rs
ElevateToken/: Cargo.toml
ElevateToken/src/: main.rs
Gabimaru/: Cargo.toml
Gabimaru/src/: main.rs
HashMiner/: Cargo.toml
HashMiner/src/: main.rs
HeapEnc/: Cargo.toml
HeapEnc/src/: main.rs
HideDll/: Cargo.toml
HideDll/src/: main.rs
HookFinder/: Cargo.toml
HookFinder/src/: main.rs
IoDllProxyLoad/: Cargo.toml
IoDllProxyLoad/src/: main.rs
JumpThreadHijack/: Cargo.toml
JumpThreadHijack/src/: main.rs
ModuleStomping/: Cargo.toml
ModuleStomping/src/: main.rs
NtCreateUserProcess/: Cargo.toml
NtCreateUserProcess/src/: main.rs
PatchlessAmsiBypass/: Cargo.toml
PatchlessAmsiBypass/src/: main.rs
PatchlessBypass/: Cargo.toml
PatchlessBypass/src/: main.rs
PolyRust/: Cargo.toml
PolyRust/src/: main.rs
SelfErase/: Cargo.toml
SelfErase/src/: main.rs
SilentFart/: Cargo.toml
SilentFart/src/: main.rs
StackEncrypt/: Cargo.toml
StackEncrypt/src/: main.rs
Stringnalyzer/: Cargo.toml
Stringnalyzer/src/: main.rs
USB_mon/: Cargo.toml
USB_mon/src/: main.rs
UnhookNtdll/: Cargo.toml
UnhookNtdll/src/: main.rs
VEH-ProxyDll/: Cargo.toml
VEH-ProxyDll/src/: main.rs
Whoami-alt/: Cargo.toml
Whoami-alt/src/: main.rs
Whoami-alt2/: Cargo.toml
Whoami-alt2/src/: main.rs
Wifi-Dump/: Cargo.toml
Wifi-Dump/src/: main.rs
