[package]
name = "ClipboradMon"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "winnt","winuser","shellapi","errhandlingapi","winbase"] }
clap = "0.5.0"