[package]
name = "ClipboradMon"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

[dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "winnt","winuser","shellapi","errhandlingapi","winbase"] }
clap = "0.5.0"