[package]
name = "DefenderWeaknes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "winnt", "winevt", "winreg","winerror" ,"combaseapi", "objbase"] }
regex = "*"
wmi = "0.13.3"
serde = { version = "1", features = ["derive"] }
chrono = "*"
prettytable = "0.10"
