[package]
name = "DumpMDEConfig"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "winnt", "winevt", "winreg","winerror" ,"combaseapi", "objbase"] }
regex = "*"
wmi = "0.13.3"
serde = { version = "1", features = ["derive"] }
chrono = "*"
prettytable = "0.10"
