[package]
name = "HeapEnc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = [ "processthreadsapi", "winuser","winbase","windef","winuser","tlhelp32","synchapi","handleapi","heapapi"] }