[package]
name = "IoDllProxyLoad"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "winnt","libloaderapi","errhandlingapi","memoryapi","synchapi","namedpipeapi","libloaderapi","fileapi","handleapi","winbase","winerror","threadpoolapiset","threadpoollegacyapiset"] }
once_cell = "1.9.0"
ntapi = "0.4.0"
