[package]
name = "PolyRust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
memmap = "0.7"
ntapi = "0.4.1"
winapi = { version = "0.3.9", features = ["fileapi", "handleapi", "winbase", "winnt", "winuser"] }
rand = "0.8"
md-5 = "0.10"

