[package]
name = "SilentFart"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["minwindef", "winnt", "processthreadsapi", "fileapi","winbase"] }
ntapi = "0.4.1"