[package]
name = "StackEncrypt"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.release]
opt-level = "z"     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = "abort"     # Abort on panic
strip = true        # Automatically strip symbols from the binary.


[dependencies]
winapi = { version = "0.3.9", features = ["sysinfoapi", "memoryapi", "processthreadsapi", "winbase", "winnt","handleapi"] }
rand = "0.8.0"